
### Tools:

- MPR#7643, GPR#1377: ocamldep, fix an exponential blowup in presence of nested
  structures and signatures (e.g. "include struct … include(struct … end) … end")
  (Florian Angeletti, review by Gabriel Scherer, report by Christophe Raffalli)

### Manual and documentation:

- PR#7647, GPR#1384: emphasize ocaml.org website and forum in README
  (Yawar Amin, review by Gabriel Scherer)

### Compiler distribution build system

- MPR#7679: make sure .a files are erased before calling ar rc, otherwise
  leftover .a files from an earlier compilation may contain unwanted modules
  (Xavier Leroy)

### Internal/compiler-libs changes:

- GPR#1488: Refreshing parmatch
  (Gabriel Scherer and Thomas Refis, review by Luc Maranget)

- GPR#1502: more command line options for expect tests
  (Florian Angeletti, review by Gabriel Scherer)

- GPR#1511: show code at error location in expect-style tests,
  using new Location.show_code_at_location function
  (Gabriel Scherer and Armaël Guéneau,
   review by Valentin Gatien-Baron and Damien Doligez)

- GPR#1519, GPR#1532: migrate expect tests to ocamltest
  (Sébastien Hinderer, review by Gabriel Scherer, Valentin Gatien-Baron
  and Nicolás Ojeda Bär)

- GPR#1520: more robust implementation of Misc.no_overflow_mul
  (Max Mouratov, review by Xavier Leroy)

### Bug fixes

- MPR#5250, GPR#1435: on Cygwin, when ocamlrun searches the path
  for a bytecode executable file, skip directories and other
  non-regular files, like other Unix variants do.
  (Xavier Leroy)

- MPR#6394, GPR#1425: fix fatal_error from Parmatch.get_type_path
  (Virgile Prevosto, review by David Allsopp, Thomas Refis and Jacques Garrigue)

* MPR#6604, GPR#931: Only allow directives with filename and at the beginning of
  the line
  (Tadeu Zagallo, report by Roberto Di Cosmo,
   review by Hongbo Zhang, David Allsopp, Gabriel Scherer, Xavier Leroy)

- PR#7660, GPR#1445: Use native Windows API to implement Unix.utimes in order to